fixing dark mode bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,5 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-/* Swipper configuration */
 .custom-swiper-pagination {
   display: flex;
   justify-content: center;
@@ -22,23 +16,13 @@
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-kanit: var(--font-kanit);
   --font-poppins: var(--font-poppins);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
+  color: #fff;
   font-family: Arial, Helvetica, sans-serif;
 }
